potential fix for image overflow

--- a/scss/stylin/_image.scss
+++ b/scss/stylin/_image.scss
@@ -1,17 +1,39 @@
 
 $img-break-padding: 10px !default;
 
+// cries in magic number
+$estimated-scrollbar-width: 200px;
+
 @for $n from 1 through $preferred-visible-rows - 1 {
   .img-break-#{$n}uh {
     @include uh($n);
 
-    display: block;
+    //display: block;
+    display: none;
 
     margin: $img-break-padding 50%;
 
     transform: translateX(-50%);
     clear: both;
   }
+
+  .img-break-#{$n}uh-block {
+    @include uh($n);
+    display: block;
+    margin-top: $img-break-padding;
+    margin-bottom: $img-break-padding;
+    width: calc(100vw - #{$estimated-scrollbar-width});
+    margin-left: calc(50% - 50vw + (#{$estimated-scrollbar-width} / 2));
+    clear: both;
+    background-color: red;
+  }
+}
+
+img.img-break {
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 @each $align in l, r, c {
